# smart402

./: .gitignore  COMPLIANCE_VERIFICATION.md  FRAMEWORK_REDESIGN.md  LICENSE  README.md  USAGE.md  pyproject.toml  requirements-dev.txt  run_web.sh  setup.py
examples/: basic_usage.py  contract_example.py  scalability_demo.py
framework/: README.md  TEST_GUIDE.md
framework/examples/autonomous-robotics/: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  package.json
framework/examples/autonomous-robotics/contracts/: RobotServiceContract.sol
framework/examples/autonomous-robotics/k8s/: deployment.yaml
framework/examples/autonomous-robotics/src/: index.js
framework/examples/autonomous-robotics/src/ai/: NeuralCore-full.js.bak  NeuralCore.js
framework/examples/autonomous-robotics/src/api/: server.js
framework/examples/autonomous-robotics/src/blockchain/: ChainlinkIntegration.js
framework/examples/autonomous-robotics/src/core/: Smart402Integration.js
framework/examples/autonomous-robotics/src/database/: schemas.js
framework/examples/autonomous-robotics/src/lib/: smart402-sdk.js
framework/examples/smart402SA/: .env.example  .gitignore  GETTING_STARTED.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  turbo.json
framework/examples/smart402SA/backend/gateway/: Dockerfile  package.json  tsconfig.json
framework/examples/smart402SA/backend/gateway/src/: index.ts
framework/examples/smart402SA/infrastructure/database/postgres/: init.sql
framework/examples/smart402SA/infrastructure/monitoring/prometheus/: prometheus.yml
framework/examples/smart402SA/infrastructure/nginx/: nginx.conf
framework/examples/smart402SA/shared/smart402-sdk/: package.json  tsconfig.json
framework/sdk/javascript/: README.md  package.json
framework/sdk/javascript/examples/: 01-quickstart.js  02-saas-subscription.js  03-freelancer-escrow.js  04-supply-chain.js  05-x402-integration.js  README.md  quickstart.js
framework/sdk/javascript/src/: index.ts
framework/sdk/javascript/src/core/: Contract.ts  Smart402.ts
framework/sdk/javascript/src/types/: index.ts
framework/sdk/javascript/tests/: smart402.test.js
framework/sdk/python/: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
framework/sdk/python/smart402/: __init__.py
framework/sdk/python/smart402/aeo/: __init__.py  engine.py
framework/sdk/python/smart402/cli/: main.py
framework/sdk/python/smart402/core/: __init__.py  contract.py  smart402.py  templates.py
framework/sdk/python/smart402/llmo/: __init__.py  engine.py
framework/sdk/python/smart402/utils/: compiler.py  export.py  validator.py
framework/sdk/python/smart402/x402/: __init__.py  client.py
framework/sdk/python/tests/: test_smart402.py
framework/sdk/rust/: Cargo.toml  README.md
framework/sdk/rust/examples/: README.md  book-seller.rs  quickstart.rs
framework/sdk/rust/src/: error.rs  lib.rs  main.rs  types.rs
framework/sdk/rust/src/aeo/: engine.rs  mod.rs
framework/sdk/rust/src/core/: contract.rs  mod.rs  smart402.rs
framework/sdk/rust/src/llmo/: engine.rs  mod.rs
framework/sdk/rust/src/utils/: mod.rs
framework/sdk/rust/src/x402/: client.rs  mod.rs
framework/sdk/rust/tests/: integration_tests.rs
framework/specs/aeo/: README.md
framework/specs/llmo/: README.md
framework/specs/x402/: README.md
src/: __init__.py
src/aeo/: __init__.py  content_generator.py  engine.py  scoring.py  semantic_graph.py
src/consensus/: __init__.py  byzantine.py  zkp.py
src/core/: __init__.py  optimization.py  orchestrator.py  state_machine.py
src/llmo/: __init__.py  contract_templates.py  encoder.py  engine.py  parser.py  semantic_contract.py  understanding.py
src/ml/: __init__.py  anomaly_detector.py  classifier.py
src/oracle/: integration.py
src/scalability/: README.md  __init__.py  auto_scaler.py  cache_manager.py  circuit_breaker.py  database_sharding.py  distributed_processor.py  load_balancer.py  message_queue.py  metrics_collector.py  rate_limiter.py  scalable_orchestrator.py
src/scc/: __init__.py  compiler.py  contract_registry.py  engine.py  optimizer.py  verifier.py
src/utils/: __init__.py  crypto.py  math_utils.py
src/x402/: __init__.py  atomic_swap.py  condition_monitor.py  engine.py  http_protocol.py  payment.py  routing.py
tests/: __init__.py  test_aeo.py  test_core.py
web/: README.md  app.py  dashboard.html  index.html
web/api/: server.py
web/docs/: algorithms.md  api-reference.md  getting-started.md
web/static/css/: dashboard.css  main.css  style.css
web/static/js/: app.js  dashboard.js  demo.js  main.js
web/templates/: index.html
wiki/: AEO-Specification.md  Example-Book-Seller.md  FAQ.md  Home.md  Installation.md  JavaScript-SDK.md  Quick-Start.md  README.md  upload-to-github-wiki.sh
(+12 files in other folders)
